# crispr-indel-analyser

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: sample_meta_data.csv
src/analysis/: aligner.py  indel_analyser.py
src/crispr_indel_analyser/: main.py
src/crispr_indel_analyser/analysis/: indel_analyser.py
src/crispr_indel_analyser/demux/: fastq_demux.py
src/crispr_indel_analyser/preprocess/: meta_preprocessor.py
src/crispr_indel_analyser/utils/: helpers.py
src/demux/: fastq_demux.py
src/io/: fastq.py  writer.py
src/preprocess/: meta_preprocessor.py
src/utils/: helpers.py
tests/: conftest.py  test_aligner.py  test_cli.py  test_fastq_demux.py  test_helpers.py  test_indel_analyser.py  test_io.py  test_preprocess.py
