# Configuration for building and distributing the CRISPR Indel Analyzer package.
# See PEP 621 and setuptools documentation for details.

[build-system]
# Required build dependencies
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
# Basic metadata
name = "crispr-indel-analyser"
version = "0.1.0"
description = "A modular pipeline for CRISPR indel frequency analysis from NGS data."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Zhipeng Qu", email = "quzp2006@gmail.com"},
]
maintainers = [
  {name = "Zhipeng Qu", email = "quzp2006@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bioinformatics",
  "Environment :: Console",
]
keywords = ["CRISPR", "indel", "NGS", "gene-editing", "demultiplexing", "bioinformatics"]
requires-python = ">=3.9"
dependencies = [
  "biopython>=1.78",
  "pandas>=1.3.0",
  "parasail>=1.2",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-console-scripts",
  "ruff>=0.1.0",
  "black",
  "jupyter",
  "pre-commit",
  "mypy",
]
doc = [
  "sphinx",
  "sphinx-rtd-theme",
]
test = [
  "pytest>=7.0",
  "pytest-cov",
]


# CLI entry points
[project.scripts]
crispr-indel-analyser = "crispr_indel_analyser.main:main"

# GUI script (future extension)
# crispr-gui = "crispr_indel_analyser.gui:launch"


# Source layout
[tool.setuptools.packages.find]
where = ["src"]
include = ["crispr_indel_analyser*"]

[tool.setuptools.package-dir]
"" = "src"


# Build configuration
[tool.setuptools]
zip-safe = false
include-package-data = true


# Linting: Ruff
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["crispr_indel_analyser"]


# Formatting: Black
[tool.black]
line-length = 88
target-version = ['py39']


# Type checking: MyPy
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
files = ["src/crispr_indel_analyser/", "tests/"]
exclude = ["__pycache__", ".git", "tests/test_data"]


# Testing: pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
